[tool.poetry]
name = "component-library"
version = "0.1.0"
description = "HTMX component library using fastapi"
authors = ["Richard <bakobiibizo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
jinja2 = "^3.1.4"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.2.2"
djlint = "^1.34.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
